--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -52,6 +52,10 @@ html:root {
   img {
     width: 80px;
   }
+  @media screen and (-ms-high-contrast: active),
+  screen and (-ms-high-contrast: none) {
+    display: none;
+  }
 }
 
 footer {
