--- a/src/assets/scss/account.scss
+++ b/src/assets/scss/account.scss
@@ -12,6 +12,7 @@
     align-items: center;
     h1 {
       font-weight: 300;
+      padding-left: 5px;
       font-size: 22px;
       word-spacing: -3px;
       line-height: 1em;
