--- a/src/assets/scss/login.scss
+++ b/src/assets/scss/login.scss
@@ -16,6 +16,7 @@
 }
 .login {
   width: 300px;
+  height: 500px;
   @media screen and (min-width: 375px) {
       height: 600px;
       border: 1px solid $dark-color;
