--- a/src/assets/scss/account.scss
+++ b/src/assets/scss/account.scss
@@ -43,6 +43,7 @@
     min-height: calc(100vh - 90px);
     @media screen and (max-width: 600px){
     grid-template-rows: 30% 70%;
+     min-height: calc(var(--vh, 1vh)*100 - 90px);
     }
     @media screen and (max-width: 1023px) {
       grid-template-columns: 1fr;
