--- a/src/assets/scss/grid.scss
+++ b/src/assets/scss/grid.scss
@@ -22,5 +22,8 @@
   height: calc(var(--vh, 1vh) * 100);
   width: 100vw;
   position: relative;
-  background: linear-gradient(-45deg,$secondary-color 60%,$base-color 0)
+  background: linear-gradient(-45deg,$secondary-color 60%,$base-color 0);
+  @media screen and (orientation: landscape) {
+    height: 100%;
+  }
 }
