--- a/src/assets/scss/tasks.scss
+++ b/src/assets/scss/tasks.scss
@@ -7,11 +7,17 @@
   overflow-y: auto;
   border: 1px solid $dark-color;
   border-bottom: none;
+  @media screen and (max-width: 600px){
+    max-height: calc(var(--vh, 1vh)*50 - 80px);
+  }
   @media screen and (min-width: $tablet) {
       max-height: calc(50vh - 190px);
   }
   @media screen and (min-width: $small-desktop ) {
       min-height: calc(100vh - 295px);
+  }
+  @media screen and (orientation: landscape) {
+    max-height: 50%;
   }
   ul {
     margin-left: 0;
