--- a/src/assets/scss/account.scss
+++ b/src/assets/scss/account.scss
@@ -42,7 +42,7 @@
   &__section {
     min-height: calc(100vh - 90px);
     @media screen and (max-width: 600px){
-    grid-template-rows: 30% 70%;
+    grid-template-rows: 1fr 4fr;
      min-height: calc(var(--vh, 1vh)*100 - 90px);
     }
     @media screen and (max-width: 1023px) {
