--- a/src/assets/scss/user-info.scss
+++ b/src/assets/scss/user-info.scss
@@ -49,7 +49,7 @@
     z-index: 1;
     margin-bottom: 10px;
     @media screen and (min-width: $tablet) {
-      display: block;
+        display: block;
         width: 140px;
         height: 140px;
         margin-bottom: 20px;
@@ -107,9 +107,9 @@
       }
     }
     h2 {
-      padding-top: 10px;
+      padding: 10px 0 20px;
       @media screen and (min-width: $tablet) {
-            padding-top: 15px;
+        padding: 15px 0 0;
       }
     }
   }
